Updated bahamas and brazil pictures.